# virtual-crew

./: .cursorrules  .env.local.example  .gitignore  DOCUMENTATION.md  NICOLA_SETUP_INSTRUCTIONS.md  README.md  SHOPIFY_INSTALL_LINK.md  package-lock.json  package.json  pyproject.toml  shopify.app.toml  tailwind.config.ts  vercel.json  vitest.config.ts
.claude/: launch.json
docs/: adm-implementation-roadmap.md  api-access-checklist.md  security-and-data-protection.md
n8n-workflows/: 01-shopify-sync.json  02-amazon-sync.json  03-ads-sync.json  04-forecast-recommendations.json
plans/: prd.md  progress.txt  ralph-once.sh  ralph.sh
src/: middleware.ts
src/__tests__/: data-service.test.ts  filters.test.ts  forecast-engine.test.ts  format.test.ts  shopify-transform.test.ts
src/adm_sop/: __init__.py  forecasting.py
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/dashboard/: error.tsx  layout.tsx  loading.tsx  page.tsx
src/app/login/: page.tsx
src/app/privacy/: page.tsx
src/components/charts/: AdSpendChart.tsx  CACChart.tsx  DriverBreakdown.tsx  ForecastChart.tsx  NewVsRepeatChart.tsx  SeasonalityChart.tsx
src/components/chat/: ChatPanel.tsx
src/components/filters/: FilterBar.tsx
src/components/forecast/: AmbitiousForecastInput.tsx
src/hooks/: useDarkMode.ts
src/lib/: mock-data.ts
src/stores/: dashboard-store.ts
src/types/: index.ts
supabase/migrations/: 0001_initial_schema.sql  001_initial_schema.sql  002_analytics_views.sql  003_shopify_customers.sql  README.md
tests/: test_forecasting.py
(+70 files in other folders)
