[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "adm-sop-foundation"
version = "0.1.0"
description = "Foundation modules for the ADM Sales and Operations Planning platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Pablo Carmona" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
